# 19-21_VTC-APL-Electronic-A-Group2_Final_Project

./: .gitignore  README.md
client/: README.md  install-build-deps.sh
client/src/PowerMonitor/PwrMonClient/: CMakeLists.txt  PwrMonClient_global.h  doxyfile  pwrmonclient.cpp  pwrmonclient.h
client/src/PowerMonitor/PwrMonClient/pwrmonclient_io/: input.cpp  output.cpp
device/: Configuration.h  LICENSE  device.ino
device/test/esp32pinouttest/: esp32pinouttest.ino
